--- a/demo/index.html
+++ b/demo/index.html
@@ -26,8 +26,14 @@
 						<d2l-icon icon="tier2:save"></d2l-icon>
 						<d2l-icon icon="tier2:browser"></d2l-icon>
 						<d2l-icon icon="tier2:send"></d2l-icon>
-						<d2l-link href="#" slot="website">www.mayaSuperWebsite.com</d2l-link>
 					</div>
+					<d2l-link href="#" slot="website">www.mayaSuperWebsite.com</d2l-link>
+					<div slot="awards-icons">
+						<d2l-icon icon="tier3:notification-bell"></d2l-icon>
+						<d2l-icon icon="tier3:menu"></d2l-icon>
+						<d2l-icon icon="tier3:bullseye"></d2l-icon>
+					</div>
+					<div slot="contact">abd@d2l.com</div>
 				</d2l-labs-user-profile-card>
 			</d2l-demo-snippet>
 		</d2l-demo-page>
