render tagline textarea using _isEditing property, tagline is now a reflected, tagline changed to an attribute from a slot

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,10 +18,10 @@
 		<d2l-demo-page page-title="d2l-labs-user-profile-card">
 			<h2>d2l-labs-user-profile-card</h2>
 			<d2l-demo-snippet>
-				<d2l-labs-user-profile-card online user-attributes=["Adminstrator","she/her"]>
+				<d2l-labs-user-profile-card online editable user-attributes=["Adminstrator","she/her"]
+					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
 					<img slot="illustration" src="maya.jpg" width="116px" height="116px" />
 					Maya Jones
-					<div slot="tagline">This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.</div>
 					<div slot="social-media-icons">
 						<d2l-icon icon="tier2:save"></d2l-icon>
 						<d2l-icon icon="tier2:browser"></d2l-icon>
