awards for demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,9 +29,8 @@
 					</div>
 					<d2l-link href="#" slot="website">www.mayaSuperWebsite.com</d2l-link>
 					<div slot="awards-icons">
-						<d2l-icon icon="tier3:notification-bell"></d2l-icon>
-						<d2l-icon icon="tier3:menu"></d2l-icon>
-						<d2l-icon icon="tier3:bullseye"></d2l-icon>
+						<img src="Badge_Grad_Hat.png" width="40px"/>
+						<img src="book-award.png" width="40px"/>
 					</div>
 					<div slot="contact">abd@d2l.com</div>
 				</d2l-labs-user-profile-card>
