--- a/test/user-profile-card.visual-diff.html
+++ b/test/user-profile-card.visual-diff.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 		<script type="module">
 			import '@brightspace-ui/core/components/typography/typography.js';
 			import '../user-profile-card.js';
 		</script>
 		<title>d2l-labs-user-profile-card visual-diff tests</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<meta charset="UTF-8">
 	</head>
 	<body class="d2l-typography">
-		<div class="visual-diff">
-			<d2l-labs-user-profile-card id="default"></d2l-labs-user-profile-card>
+		<div>
+			<d2l-labs-user-profile-card id="default" tagline="This is a tagline!">
+				Person's Name
+				<div slot="social-media-icons">
+					<d2l-icon icon="tier2:save"></d2l-icon>
+					<d2l-icon icon="tier2:browser"></d2l-icon>
+					<d2l-icon icon="tier2:send"></d2l-icon>
+				</div>
+				<d2l-link href="#" slot="website">www.website.com</d2l-link>
+			</d2l-labs-user-profile-card>
 		</div>
 	</body>
 </html>
