Moved user display name to attribute, added link style/event to display name.

--- a/test/user-profile-card.visual-diff.html
+++ b/test/user-profile-card.visual-diff.html
@@ -11,8 +11,9 @@
 	</head>
 	<body class="d2l-typography">
 		<div>
-			<d2l-labs-user-profile-card id="default" tagline="This is a tagline!">
-				Person's Name
+			<d2l-labs-user-profile-card id="default"
+				display-name="Person's Name"
+				tagline="This is a tagline!">
 				<div slot="social-media-icons">
 					<d2l-icon icon="tier2:save"></d2l-icon>
 					<d2l-icon icon="tier2:browser"></d2l-icon>
