Imports for slotted components

--- a/test/user-profile-card.visual-diff.html
+++ b/test/user-profile-card.visual-diff.html
@@ -2,6 +2,8 @@
 <html lang="en">
 	<head>
 		<script type="module">
+			import '@brightspace-ui/core/components/icon/icon.js';
+			import '@brightspace-ui/core/components/link/link.js';
 			import '@brightspace-ui/core/components/typography/typography.js';
 			import '../user-profile-card.js';
 		</script>
