--- a/demo/index.html
+++ b/demo/index.html
@@ -35,7 +35,7 @@
 				</d2l-labs-user-profile-card>
 			</d2l-demo-snippet>
 			<d2l-demo-snippet>
-				<d2l-labs-user-profile-card offline show-email show-im progress-viewable user-attributes=["Adminstrator","she/her"]
+				<d2l-labs-user-profile-card offline show-email show-im show-progress user-attributes=["Adminstrator","she/her"]
 					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
 					<img slot="illustration" src="maya.jpg" width="116px" height="116px" />
 					Maya Jones
