--- a/test/user-profile-card.visual-diff.html
+++ b/test/user-profile-card.visual-diff.html
@@ -22,7 +22,7 @@
 			</d2l-labs-user-profile-card>
 		</div>
 		<div>
-			<d2l-labs-user-profile-card id="with-actions" tagline="This is a tagline!" show-email show-im progress-viewable>
+			<d2l-labs-user-profile-card id="with-actions" tagline="This is a tagline!" show-email show-im show-progress>
 				Person's Name
 				<div slot="social-media-icons">
 					<d2l-icon icon="tier2:save"></d2l-icon>
