Change display name to attribute, add onClick event for name and image (#17)
* Moved user display name to attribute, added link style/event to display name.
* Update readme with display-name property
* Updating Visual Diff Goldens (#24)

--- a/test/user-profile-card.visual-diff.html
+++ b/test/user-profile-card.visual-diff.html
@@ -2,6 +2,8 @@
 <html lang="en">
 	<head>
 		<script type="module">
+			import '@brightspace-ui/core/components/icons/icon.js';
+			import '@brightspace-ui/core/components/link/link.js';
 			import '@brightspace-ui/core/components/typography/typography.js';
 			import '../user-profile-card.js';
 		</script>
@@ -11,8 +13,9 @@
 	</head>
 	<body class="d2l-typography">
 		<div>
-			<d2l-labs-user-profile-card id="default" tagline="This is a tagline!">
-				Person's Name
+			<d2l-labs-user-profile-card id="default"
+				display-name="Person's Name"
+				tagline="This is a tagline!">
 				<div slot="social-media-icons">
 					<d2l-icon icon="tier2:save"></d2l-icon>
 					<d2l-icon icon="tier2:browser"></d2l-icon>
