--- a/test/user-profile-card.visual-diff.html
+++ b/test/user-profile-card.visual-diff.html
@@ -25,8 +25,10 @@
 			</d2l-labs-user-profile-card>
 		</div>
 		<div>
-			<d2l-labs-user-profile-card id="with-actions" tagline="This is a tagline!" show-email show-im show-progress>
-				Person's Name
+			<d2l-labs-user-profile-card id="with-actions"
+				show-email show-im show-progress
+				display-name="Person's Name"
+				tagline="This is a tagline!" >
 				<div slot="social-media-icons">
 					<d2l-icon icon="tier2:save"></d2l-icon>
 					<d2l-icon icon="tier2:browser"></d2l-icon>
