fix: made attributes to show the email/IM actions depending on user permissions (#15)
* Add attributes to show the email/IM actions depending on user permissions
* add v-diff for card with actions
* Made visibility attribute names consistent

--- a/demo/index.html
+++ b/demo/index.html
@@ -36,7 +36,7 @@
 				</d2l-labs-user-profile-card>
 			</d2l-demo-snippet>
 			<d2l-demo-snippet>
-				<d2l-labs-user-profile-card offline progress-viewable
+				<d2l-labs-user-profile-card offline show-email show-im show-progress
 					display-name="Maya Jones"
 					user-attributes=["Adminstrator","she/her"]
 					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
