--- a/test/user-profile-card.visual-diff.html
+++ b/test/user-profile-card.visual-diff.html
@@ -24,5 +24,18 @@
 				<d2l-link href="#" slot="website">www.website.com</d2l-link>
 			</d2l-labs-user-profile-card>
 		</div>
+		<div>
+			<d2l-labs-user-profile-card id="with-actions"
+				show-email show-im show-progress
+				display-name="Person's Name"
+				tagline="This is a tagline!" >
+				<div slot="social-media-icons">
+					<d2l-icon icon="tier2:save"></d2l-icon>
+					<d2l-icon icon="tier2:browser"></d2l-icon>
+					<d2l-icon icon="tier2:send"></d2l-icon>
+				</div>
+				<d2l-link href="#" slot="website">www.website.com</d2l-link>
+			</d2l-labs-user-profile-card>
+		</div>
 	</body>
 </html>
