--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,7 @@
 		<d2l-demo-page page-title="d2l-labs-user-profile-card">
 			<h2>d2l-labs-user-profile-card</h2>
 			<d2l-demo-snippet>
-				<d2l-labs-user-profile-card online editable show-awards show-status
+				<d2l-labs-user-profile-card online editable show-status
 					display-name="Maya Jones"
 					user-attributes=["Adminstrator","she/her"]
 					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
@@ -36,7 +36,7 @@
 				</d2l-labs-user-profile-card>
 			</d2l-demo-snippet>
 			<d2l-demo-snippet>
-				<d2l-labs-user-profile-card offline show-email show-im show-progress show-awards show-status
+				<d2l-labs-user-profile-card offline show-email show-im show-progress show-status
 					display-name="Maya Jones"
 					user-attributes=["Adminstrator","she/her"]
 					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
