Add display name tabstop

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,14 +29,17 @@
 						<d2l-icon icon="tier2:send"></d2l-icon>
 					</div>
 					<d2l-link href="#" slot="website">www.mayaSuperWebsite.com</d2l-link>
-					<div slot="awards-icons">
-						<img src="Badge_Grad_Hat.png" width="40px"/>
-						<img src="book-award.png" width="40px"/>
-					</div>
 				</d2l-labs-user-profile-card>
 			</d2l-demo-snippet>
 			<d2l-demo-snippet>
-				<d2l-labs-user-profile-card offline show-email show-im show-progress show-status
+				<d2l-labs-user-profile-card  show-email show-im show-progress
+					display-name="Maya Jones"
+					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
+					<img slot="illustration" src="maya.jpg" width="116px" height="116px" />
+				</d2l-labs-user-profile-card>
+			</d2l-demo-snippet>
+			<d2l-demo-snippet>
+				<d2l-labs-user-profile-card offline
 					display-name="Maya Jones"
 					user-attributes=["Adminstrator","she/her"]
 					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
