✨ Profile card opens on hover

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,9 @@
 		<d2l-demo-page page-title="d2l-labs-user-profile-card">
 			<h2>d2l-labs-user-profile-card</h2>
 			<d2l-demo-snippet>
+				<button id="demo-1">Opener</button>
 				<d2l-labs-user-profile-card online editable show-status
+					opener="demo-1"
 					display-name="Maya Jones"
 					user-attributes=["Adminstrator","she/her"]
 					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
