--- a/demo/index.html
+++ b/demo/index.html
@@ -18,13 +18,13 @@
 		<d2l-demo-page page-title="d2l-labs-user-profile-card">
 			<h2>d2l-labs-user-profile-card</h2>
 			<d2l-demo-snippet>
-				<button id="demo-1">Opener</button>
-				<d2l-labs-user-profile-card online editable show-status
-					opener="demo-1"
+				<d2l-labs-user-profile-card online editable show-status large-opener
+					href="./data/user.json"
+					token="token"
 					display-name="Maya Jones"
 					user-attributes=["Adminstrator","she/her"]
 					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
-					<img slot="illustration" src="maya.jpg" width="116px" height="116px" />
+					<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
 					<div slot="social-media-icons">
 						<d2l-icon icon="tier2:save"></d2l-icon>
 						<d2l-icon icon="tier2:browser"></d2l-icon>
@@ -35,17 +35,21 @@
 			</d2l-demo-snippet>
 			<d2l-demo-snippet>
 				<d2l-labs-user-profile-card  show-email show-im show-progress
+					href="./data/user.json"
+					token="token"
 					display-name="Maya Jones"
 					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
-					<img slot="illustration" src="maya.jpg" width="116px" height="116px" />
+					<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
 				</d2l-labs-user-profile-card>
 			</d2l-demo-snippet>
 			<d2l-demo-snippet>
 				<d2l-labs-user-profile-card offline
+					href="./data/user.json"
+					token="token"
 					display-name="Maya Jones"
 					user-attributes=["Adminstrator","she/her"]
 					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
-					<img slot="illustration" src="maya.jpg" width="116px" height="116px" />
+					<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
 					<div slot="social-media-icons">
 						<d2l-icon icon="tier2:save"></d2l-icon>
 						<d2l-icon icon="tier2:browser"></d2l-icon>
@@ -53,18 +57,20 @@
 					</div>
 					<d2l-link href="#" slot="website">www.mayaSuperWebsite.com</d2l-link>
 					<div slot="awards-icons">
-						<img src="Badge_Grad_Hat.png" width="40px"/>
-						<img src="book-award.png" width="40px"/>
+						<img src="img/Badge_Grad_Hat.png" width="40px"/>
+						<img src="img/book-award.png" width="40px"/>
 					</div>
 				</d2l-labs-user-profile-card>
 			</d2l-demo-snippet>
 		</d2l-demo-page>
 		<script type="text/javascript">
-			const myElement = document.querySelector('d2l-labs-user-profile-card');
-			myElement.addEventListener('d2l-labs-user-profile-card-tagline-updated', (e) => {console.log(e);});
-			myElement.addEventListener('d2l-labs-user-profile-card-message', (e) => {console.log(e);});
-			myElement.addEventListener('d2l-labs-user-profile-card-email', (e) => {console.log(e);});
-			myElement.addEventListener('d2l-labs-user-profile-card-progress', (e) => {console.log(e);});
+			const profileCards = document.querySelectorAll('d2l-labs-user-profile-card');
+			profileCards.forEach( (card) => {
+				card.addEventListener('d2l-labs-user-profile-card-tagline-updated', (e) => {console.log(e);});
+				card.addEventListener('d2l-labs-user-profile-card-message', (e) => {console.log(e);});
+				card.addEventListener('d2l-labs-user-profile-card-email', (e) => {console.log(e);});
+				card.addEventListener('d2l-labs-user-profile-card-progress', (e) => {console.log(e);});
+			});
 		</script>
 	</body>
 </html>
