✅ Added vdiff for positioning and rtl

--- a/test/user-profile-card.visual-diff.html
+++ b/test/user-profile-card.visual-diff.html
@@ -1,23 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<script type="module">
-			import '@brightspace-ui/core/components/icons/icon.js';
-			import '@brightspace-ui/core/components/link/link.js';
-			import '@brightspace-ui/core/components/typography/typography.js';
-			import '../user-profile-card.js';
-		</script>
-		<title>d2l-labs-user-profile-card visual-diff tests</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta charset="UTF-8">
-		<style>
-			.test-case {
-				padding: 200px;
-			}
-		</style>
-	</head>
-	<body class="d2l-typography">
-		<div class="test-case">
+<head>
+	<script type="module">
+		import '@brightspace-ui/core/components/icons/icon.js';
+		import '@brightspace-ui/core/components/link/link.js';
+		import '@brightspace-ui/core/components/typography/typography.js';
+		import '../user-profile-card.js';
+	</script>
+	<title>d2l-user-profile-card visual-diff tests</title>
+	<meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<style>
+
+		html, body {
+			height: 100%;
+			margin: 0;
+			box-sizing: border-box;
+		}
+		.visual-diff {
+			margin: 0;
+			position: relative;
+			width: 100%;
+			height: 100%;
+		}
+		.test-case {
+			position: absolute;
+		}
+		.top {
+			top: 20px;
+		}
+		.bottom {
+			bottom: 20px;
+		}
+		.left {
+			left: 20px;
+		}
+		.offset-left {
+			left: 200px;
+		}
+		.right {
+			right: 20px;
+		}
+		.offset-right {
+			right: 200px;
+		}
+		.middle-horizontal {
+			left: calc(50% - 15px);
+		}
+		.middle-vertical {
+			top: calc(50% - 15px);
+		}
+	</style>
+</head>
+<body class="d2l-typography">
+	<div class="visual-diff">
+		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="default"
 				online show-status
 				display-name="Person's Name"
@@ -34,7 +71,8 @@
 				<d2l-link href="#" slot="website">www.website.com</d2l-link>
 			</d2l-labs-user-profile-card>
 		</div>
-		<div class="test-case">
+
+		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="with-actions"
 				show-email show-im show-progress
 				display-name="Person's Name"
@@ -51,7 +89,8 @@
 				<d2l-link href="#" slot="website">www.website.com</d2l-link>
 			</d2l-labs-user-profile-card>
 		</div>
-		<div class="test-case">
+
+		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="with-awards"
 				show-email show-im show-progress
 				display-name="Person's Name"
@@ -72,5 +111,110 @@
 				</div>
 			</d2l-labs-user-profile-card>
 		</div>
-	</body>
+
+		<div class="test-case top middle-horizontal">
+			<d2l-labs-user-profile-card id="with-awards-rtl"
+				dir="rtl"
+				show-email show-im show-progress
+				display-name="Person's Name"
+				tagline="This is a tagline!"
+				user-attributes=["Attribute1","Attribute2"]
+				href="./data/user.json"
+				token="token">
+				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+				<div slot="social-media-icons">
+					<d2l-icon icon="tier2:save"></d2l-icon>
+					<d2l-icon icon="tier2:browser"></d2l-icon>
+					<d2l-icon icon="tier2:send"></d2l-icon>
+				</div>
+				<d2l-link href="#" slot="website">www.website.com</d2l-link>
+				<div slot="awards-icons">
+					<img src="./img/Badge_Grad_Hat.png" width="40px"/>
+					<img src="./img/book-award.png" width="40px"/>
+				</div>
+			</d2l-labs-user-profile-card>
+		</div>
+
+		<div class="test-case top left">
+			<d2l-labs-user-profile-card id="position-top-left"
+				display-name="Person's Name"
+				tagline="This is a tagline!"
+				href="./data/user.json"
+				token="token">
+				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+			</d2l-labs-user-profile-card>
+		</div>
+
+		<div class="test-case top middle-horizontal">
+			<d2l-labs-user-profile-card id="position-top-middle"
+				display-name="Person's Name"
+				tagline="This is a tagline!"
+				href="./data/user.json"
+				token="token">
+				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+			</d2l-labs-user-profile-card>
+		</div>
+
+		<div class="test-case top right">
+			<d2l-labs-user-profile-card id="position-top-right"
+				display-name="Person's Name"
+				tagline="This is a tagline!"
+				href="./data/user.json"
+				token="token">
+				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+			</d2l-labs-user-profile-card>
+		</div>
+
+		<div class="test-case bottom left">
+			<d2l-labs-user-profile-card id="position-bottom-left"
+				display-name="Person's Name"
+				tagline="This is a tagline!"
+				href="./data/user.json"
+				token="token">
+				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+			</d2l-labs-user-profile-card>
+		</div>
+
+		<div class="test-case bottom middle-horizontal">
+			<d2l-labs-user-profile-card id="position-bottom-middle"
+				display-name="Person's Name"
+				tagline="This is a tagline!"
+				href="./data/user.json"
+				token="token">
+				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+			</d2l-labs-user-profile-card>
+		</div>
+
+		<div class="test-case bottom right">
+			<d2l-labs-user-profile-card id="position-bottom-right"
+				display-name="Person's Name"
+				tagline="This is a tagline!"
+				href="./data/user.json"
+				token="token">
+				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+			</d2l-labs-user-profile-card>
+		</div>
+
+		<div class="test-case middle-vertical offset-left">
+			<d2l-labs-user-profile-card id="position-offset-left"
+				display-name="Person's Name"
+				tagline="This is a tagline!"
+				href="./data/user.json"
+				token="token">
+				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+			</d2l-labs-user-profile-card>
+		</div>
+
+		<div class="test-case middle-vertical offset-right">
+			<d2l-labs-user-profile-card id="position-offset-right"
+				display-name="Person's Name"
+				tagline="This is a tagline!"
+				href="./data/user.json"
+				token="token">
+				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+			</d2l-labs-user-profile-card>
+		</div>
+
+	</div>
+</body>
 </html>
