--- a/demo/index.html
+++ b/demo/index.html
@@ -1,77 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<link rel="stylesheet" href="/node_modules/@brightspace-ui/core/components/demo/styles.css" type="text/css">
-		<script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-		<script type="module">
-			import '@brightspace-ui/core/components/demo/demo-page.js';
-			import '@brightspace-ui/core/components/button/button-icon.js';
-			import '@brightspace-ui/core/components/link/link.js';
-			import '../user-profile-card.js';
-		</script>
-		<title>d2l-labs-user-profile-card</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<meta charset="UTF-8">
-	</head>
-	<body>
-		<d2l-demo-page page-title="d2l-labs-user-profile-card">
-			<h2>d2l-labs-user-profile-card</h2>
-			<d2l-demo-snippet>
-				<d2l-labs-user-profile-card online show-status large-opener
-					href="./data/user.json"
-					token="token"
-					display-name="Maya Jones"
-					user-attributes=["Adminstrator","she/her"]
-					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
-					<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
-					<div slot="social-media-icons">
-						<d2l-icon icon="tier2:save"></d2l-icon>
-						<d2l-icon icon="tier2:browser"></d2l-icon>
-						<d2l-icon icon="tier2:send"></d2l-icon>
-					</div>
-					<d2l-link href="#" slot="website">www.mayaSuperWebsite.com</d2l-link>
-				</d2l-labs-user-profile-card>
-			</d2l-demo-snippet>
-			<d2l-demo-snippet>
-				<d2l-labs-user-profile-card  show-email show-im show-progress
-					href="./data/user.json"
-					token="token"
-					display-name="Maya Jones"
-					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
-					<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
-				</d2l-labs-user-profile-card>
-			</d2l-demo-snippet>
-			<d2l-demo-snippet>
-				<d2l-labs-user-profile-card offline
-					href="./data/user.json"
-					token="token"
-					display-name="Maya Jones"
-					user-attributes=["Adminstrator","she/her"]
-					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
-					<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
-					<div slot="social-media-icons">
-						<d2l-icon icon="tier2:save"></d2l-icon>
-						<d2l-icon icon="tier2:browser"></d2l-icon>
-						<d2l-icon icon="tier2:send"></d2l-icon>
-					</div>
-					<d2l-link href="#" slot="website">www.mayaSuperWebsite.com</d2l-link>
-					<div slot="awards-icons">
-						<img src="img/Badge_Grad_Hat.png" width="40px"/>
-						<img src="img/book-award.png" width="40px"/>
-					</div>
-				</d2l-labs-user-profile-card>
-			</d2l-demo-snippet>
-		</d2l-demo-page>
-		<script type="text/javascript">
-			const profileCards = document.querySelectorAll('d2l-labs-user-profile-card');
-			profileCards.forEach((card) => {
-				card.addEventListener('d2l-labs-user-profile-card-profile', (e) => {console.log(e);});
-				card.addEventListener('d2l-labs-user-profile-card-opened', (e) => {console.log(e);});
-				card.addEventListener('d2l-labs-user-profile-card-message', (e) => {console.log(e);});
-				card.addEventListener('d2l-labs-user-profile-card-email', (e) => {console.log(e);});
-				card.addEventListener('d2l-labs-user-profile-card-progress', (e) => {console.log(e);});
-			});
-		</script>
-	</body>
+<head>
+	<link rel="stylesheet" href="/node_modules/@brightspace-ui/core/components/demo/styles.css" type="text/css">
+	<script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+	<script type="module">
+		import '@brightspace-ui/core/components/colors/colors.js';
+		import '@brightspace-ui/core/components/typography/typography.js';
+	</script>
+	<title>d2l-user-profile-card index</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta charset="UTF-8">
+	<style>
+		body {
+			padding: 0 30px;
+		}
+	</style>
+</head>
+<body class="d2l-typography">
+
+	<h1 class="d2l-heading-2">Demos</h1>
+
+	<ul>
+		<li><a href="user-profile-card.html">d2l-labs-user-profile-card</a></li>
+		<li><a href="user-profile-html-block.html">d2l-html-block (user profile renderer)</a></li>
+	</ul>
+
+</body>
 </html>
