--- a/demo/index.html
+++ b/demo/index.html
@@ -21,7 +21,7 @@
 					href="./data/user.json"
 					token="token"
 					image="./img/maya.jpg"
-					website="www.mayaSuperWebsite.com"
+					website="www.mayaSuperWebsiteExtraLongName.com"
 					display-name="Maya Jones"
 					user-attributes=["Adminstrator","she/her"]
 					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field."
@@ -34,13 +34,22 @@
 				</d2l-labs-user-profile-card>
 			</d2l-demo-snippet>
 			<d2l-demo-snippet>
+				<d2l-labs-user-profile-card small-opener
+					href="./data/user.json"
+					token="token"
+					image="./img/maya.jpg"
+					display-name="Maya Jones"
+					user-attributes=["Adminstrator","she/her"]
+					website="www.mayaSuperWebsite.com">
+				</d2l-labs-user-profile-card>
+			</d2l-demo-snippet>
+			<d2l-demo-snippet>
 				<d2l-labs-user-profile-card  show-email show-im show-progress
 					href="./data/user.json"
 					token="token"
 					image="./img/maya.jpg"
-					website="www.mayaSuperWebsite.com"
 					display-name="Maya Jones"
-					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
+					tagline="This is my tagline, yo!">
 				</d2l-labs-user-profile-card>
 			</d2l-demo-snippet>
 			<d2l-demo-snippet>
