--- a/demo/user-profile-card.html
+++ b/demo/user-profile-card.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" href="/node_modules/@brightspace-ui/core/components/demo/styles.css" type="text/css">
 		<script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 		<script type="module">
 			import '@brightspace-ui/core/components/demo/demo-page.js';
-			import '@brightspace-ui/core/components/button/button-icon.js';
-			import '@brightspace-ui/core/components/link/link.js';
 			import '../user-profile-card.js';
 		</script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,59 +14,68 @@
 		<d2l-demo-page page-title="d2l-labs-user-profile-card">
 
 			<h2>large opener, show status, social-media, user attributes</h2>
-
 			<d2l-demo-snippet>
 				<d2l-labs-user-profile-card online show-status large-opener
 					href="./data/user.json"
 					token="token"
+					image="./img/maya.jpg"
+					website="www.mayaSuperWebsiteExtraLongName.com"
 					display-name="Maya Jones"
 					user-attributes=["Adminstrator","she/her"]
-					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
-					<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field."
+					>
 					<div slot="social-media-icons">
 						<d2l-icon icon="tier2:save"></d2l-icon>
 						<d2l-icon icon="tier2:browser"></d2l-icon>
 						<d2l-icon icon="tier2:send"></d2l-icon>
 					</div>
-					<d2l-link href="#" slot="website">www.mayaSuperWebsite.com</d2l-link>
+				</d2l-labs-user-profile-card>
+			</d2l-demo-snippet>
+
+			<h2>small opener, email, user attributes</h2>
+			<d2l-demo-snippet>
+				<d2l-labs-user-profile-card small-opener
+					href="./data/user.json"
+					token="token"
+					image="./img/maya.jpg"
+					display-name="Maya Jones"
+					user-attributes=["Adminstrator","she/her"]
+					website="www.mayaSuperWebsite.com">
 				</d2l-labs-user-profile-card>
 			</d2l-demo-snippet>
 
 			<h2>email, instant message, progress</h2>
-
 			<d2l-demo-snippet>
 				<d2l-labs-user-profile-card  show-email show-im show-progress
 					href="./data/user.json"
 					token="token"
+					image="./img/maya.jpg"
 					display-name="Maya Jones"
-					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
-					<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+					tagline="This is my tagline, yo!">
 				</d2l-labs-user-profile-card>
 			</d2l-demo-snippet>
 
 			<h2>user-attributes, social-media, awards</h2>
-
 			<d2l-demo-snippet>
 				<d2l-labs-user-profile-card offline
 					href="./data/user.json"
 					token="token"
+					image="./img/maya.jpg"
+					website="www.mayaSuperWebsite.com"
 					display-name="Maya Jones"
 					user-attributes=["Adminstrator","she/her"]
 					tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field.">
-					<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
 					<div slot="social-media-icons">
 						<d2l-icon icon="tier2:save"></d2l-icon>
 						<d2l-icon icon="tier2:browser"></d2l-icon>
 						<d2l-icon icon="tier2:send"></d2l-icon>
 					</div>
-					<d2l-link href="#" slot="website">www.mayaSuperWebsite.com</d2l-link>
 					<div slot="awards-icons">
 						<img src="img/Badge_Grad_Hat.png" width="40px"/>
 						<img src="img/book-award.png" width="40px"/>
 					</div>
 				</d2l-labs-user-profile-card>
 			</d2l-demo-snippet>
-
 		</d2l-demo-page>
 		<script type="text/javascript">
 			const profileCards = document.querySelectorAll('d2l-labs-user-profile-card');
