--- a/test/user-profile-card.visual-diff.html
+++ b/test/user-profile-card.visual-diff.html
@@ -3,9 +3,12 @@
 <head>
 	<script type="module">
 		import '@brightspace-ui/core/components/icons/icon.js';
-		import '@brightspace-ui/core/components/link/link.js';
 		import '@brightspace-ui/core/components/typography/typography.js';
 		import '../user-profile-card.js';
+	</script>
+	<script>
+		const rtl = (window.location.search.indexOf('dir=rtl') !== -1);
+		if (rtl) document.documentElement.setAttribute('dir', 'rtl');
 	</script>
 	<title>d2l-user-profile-card visual-diff tests</title>
 	<meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1.0">
@@ -13,6 +16,7 @@
 	<style>
 
 		html, body {
+			font-size: 20px;
 			height: 100%;
 			margin: 0;
 			box-sizing: border-box;
@@ -58,17 +62,35 @@
 			<d2l-labs-user-profile-card id="default"
 				online show-status
 				display-name="Person's Name"
+				image="./img/maya.jpg"
 				tagline="This is a tagline!"
 				user-attributes=["Attribute1","Attribute2"]
 				href="./data/user.json"
-				token="token">
-				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+				token="token"
+				website="www.website.com">
 				<div slot="social-media-icons">
 					<d2l-icon icon="tier2:save"></d2l-icon>
 					<d2l-icon icon="tier2:browser"></d2l-icon>
 					<d2l-icon icon="tier2:send"></d2l-icon>
 				</div>
-				<d2l-link href="#" slot="website">www.website.com</d2l-link>
+			</d2l-labs-user-profile-card>
+		</div>
+
+		<div class="test-case top middle-horizontal">
+			<d2l-labs-user-profile-card id="long-info"
+				online show-status
+				display-name="Person's Name"
+				image="./img/maya.jpg"
+				tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field."
+				user-attributes=["Attribute1","Attribute2"]
+				href="./data/user.json"
+				token="token"
+				website="www.website-with-a-very-incredibly-crazy-extra-long-name.com">
+				<div slot="social-media-icons">
+					<d2l-icon icon="tier2:save"></d2l-icon>
+					<d2l-icon icon="tier2:browser"></d2l-icon>
+					<d2l-icon icon="tier2:send"></d2l-icon>
+				</div>
 			</d2l-labs-user-profile-card>
 		</div>
 
@@ -76,17 +98,17 @@
 			<d2l-labs-user-profile-card id="with-actions"
 				show-email show-im show-progress
 				display-name="Person's Name"
+				image="./img/maya.jpg"
 				tagline="This is a tagline!"
 				user-attributes=["Attribute1","Attribute2"]
 				href="./data/user.json"
-				token="token">
-				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+				token="token"
+				website="www.website.com">
 				<div slot="social-media-icons">
 					<d2l-icon icon="tier2:save"></d2l-icon>
 					<d2l-icon icon="tier2:browser"></d2l-icon>
 					<d2l-icon icon="tier2:send"></d2l-icon>
 				</div>
-				<d2l-link href="#" slot="website">www.website.com</d2l-link>
 			</d2l-labs-user-profile-card>
 		</div>
 
@@ -94,40 +116,17 @@
 			<d2l-labs-user-profile-card id="with-awards"
 				show-email show-im show-progress
 				display-name="Person's Name"
+				image="./img/maya.jpg"
 				tagline="This is a tagline!"
 				user-attributes=["Attribute1","Attribute2"]
 				href="./data/user.json"
-				token="token">
-				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
+				token="token"
+				website="www.website.com">
 				<div slot="social-media-icons">
 					<d2l-icon icon="tier2:save"></d2l-icon>
 					<d2l-icon icon="tier2:browser"></d2l-icon>
 					<d2l-icon icon="tier2:send"></d2l-icon>
 				</div>
-				<d2l-link href="#" slot="website">www.website.com</d2l-link>
-				<div slot="awards-icons">
-					<img src="./img/Badge_Grad_Hat.png" width="40px"/>
-					<img src="./img/book-award.png" width="40px"/>
-				</div>
-			</d2l-labs-user-profile-card>
-		</div>
-
-		<div class="test-case top middle-horizontal">
-			<d2l-labs-user-profile-card id="with-awards-rtl"
-				dir="rtl"
-				show-email show-im show-progress
-				display-name="Person's Name"
-				tagline="This is a tagline!"
-				user-attributes=["Attribute1","Attribute2"]
-				href="./data/user.json"
-				token="token">
-				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
-				<div slot="social-media-icons">
-					<d2l-icon icon="tier2:save"></d2l-icon>
-					<d2l-icon icon="tier2:browser"></d2l-icon>
-					<d2l-icon icon="tier2:send"></d2l-icon>
-				</div>
-				<d2l-link href="#" slot="website">www.website.com</d2l-link>
 				<div slot="awards-icons">
 					<img src="./img/Badge_Grad_Hat.png" width="40px"/>
 					<img src="./img/book-award.png" width="40px"/>
@@ -136,82 +135,82 @@
 		</div>
 
 		<div class="test-case top left">
-			<d2l-labs-user-profile-card id="position-top-left"
+			<d2l-labs-user-profile-card id="position-top-left" small-opener
 				display-name="Person's Name"
+				image="./img/maya.jpg"
 				tagline="This is a tagline!"
 				href="./data/user.json"
 				token="token">
-				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="position-top-middle"
 				display-name="Person's Name"
+				image="./img/maya.jpg"
 				tagline="This is a tagline!"
 				href="./data/user.json"
 				token="token">
-				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case top right">
-			<d2l-labs-user-profile-card id="position-top-right"
+			<d2l-labs-user-profile-card id="position-top-right" large-opener
 				display-name="Person's Name"
+				image="./img/maya.jpg"
 				tagline="This is a tagline!"
 				href="./data/user.json"
 				token="token">
-				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case bottom left">
-			<d2l-labs-user-profile-card id="position-bottom-left"
+			<d2l-labs-user-profile-card id="position-bottom-left" small-opener
 				display-name="Person's Name"
+				image="./img/maya.jpg"
 				tagline="This is a tagline!"
 				href="./data/user.json"
 				token="token">
-				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case bottom middle-horizontal">
 			<d2l-labs-user-profile-card id="position-bottom-middle"
 				display-name="Person's Name"
+				image="./img/maya.jpg"
 				tagline="This is a tagline!"
 				href="./data/user.json"
 				token="token">
-				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case bottom right">
-			<d2l-labs-user-profile-card id="position-bottom-right"
+			<d2l-labs-user-profile-card id="position-bottom-right" large-opener
 				display-name="Person's Name"
+				image="./img/maya.jpg"
 				tagline="This is a tagline!"
 				href="./data/user.json"
 				token="token">
-				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case middle-vertical offset-left">
 			<d2l-labs-user-profile-card id="position-offset-left"
 				display-name="Person's Name"
+				image="./img/maya.jpg"
 				tagline="This is a tagline!"
 				href="./data/user.json"
 				token="token">
-				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case middle-vertical offset-right">
 			<d2l-labs-user-profile-card id="position-offset-right"
 				display-name="Person's Name"
+				image="./img/maya.jpg"
 				tagline="This is a tagline!"
 				href="./data/user.json"
 				token="token">
-				<img slot="illustration" src="./img/maya.jpg" width="116px" height="116px" />
 			</d2l-labs-user-profile-card>
 		</div>
 
